# Placeholder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  label.zpl  main.cpp
.github/workflows/: build.yml
core/: CsvImporter.cpp  CsvImporter.h  LabelElement.h  LabelTemplate.h  PrinterSettings.h  TemplateStorage.cpp  TemplateStorage.h  VariableResolver.cpp  VariableResolver.h  ZebraPrinter.cpp  ZebraPrinter.h  ZplGenerator.cpp  ZplGenerator.h
docs/: ARCHITECTURE.md  KNOWN_ISSUES.md  MANUAL_QA_CHECKLIST.md  RELEASE_PROCESS.md  ROADMAP.md  UI_REDESIGN.md  USER_GUIDE.md  example_generated.zpl
examples/: sample_items.csv
include/LabelPrinterApp/: LabelElement.h  LabelTemplate.h  PrinterSettings.h  TemplateStorage.h  ZebraPrinter.h  ZplGenerator.h
scripts/: build-and-test.ps1  package-release.ps1
src/: ZebraPrinter.cpp  main.cpp
src/ui/: MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h
templates/: asset_qr_label.json  barcode_test_2_25x0_75.json  blank_4x2.json  database_test_2_25x0_75.json  database_test_4x2.json  default_label.json  inventory_label.json  mini_shipping_label.json  price_label.json  serial_number_label.json  serial_test_2_25x0_75.json  serial_test_4x2.json  shelf_bin_label.json  shipping_test_4x2.json  test_label_4x2.json  work_center_dispatch_label.json
tests/: model_zpl_tests.cpp
ui/: ElementEditorWidget.cpp  ElementEditorWidget.h  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h
